--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=demo
-server.port=80
+server.port=8080
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://database-server.cejk26o6y8vf.us-east-1.rds.amazonaws.com:3306/demo_db
+spring.datasource.url=
 spring.datasource.username=admin
-spring.datasource.password=Af7jKfTT8OSo1lotDhR8
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
